<resources>
    <string name="app_name">onboarding</string>
    <string name="hello_world">Hello World</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="age">Age</string>
    <string name="years">Years</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_new_account">Register new account</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="hobbies">Hobbies</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="error_invalid_email">Invalid Format Email</string>
    <string name="error_password_length">Password length should be 6 characters</string>
    <string name="back">Back</string>
    <string name="optional">Optional</string>
    <string name="registration_success">Registration Success</string>
    <string name="error_email_required">Email Required</string>
    <string name="error_password_required">Password Required</string>
    <string name="error_confirm_password_required">Confirm Password Required</string>
    <string name="error_password_mismatch">Password Mismatch</string>
    <string name="title_list">List</string>
    <string name="title_home">Home</string>
    <string name="title_service">Service</string>
    <string name="add_people">Add people</string>
    <string name="registering_user">Registering user</string>
    <string name="error_registration">Error al registrar: %s</string>
    <string name="error_email_exists">This email is already registered</string>
    <string name="registration_failed">Registration failed. Please try again</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_birthdate_required">Birth date is required</string>
    <string name="error_address_required">Address is required</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_phone_invalid">Invalid phone number</string>
    <string name="person_registered_success">Person registered successfully</string>
    <string name="profile_image">Profile image</string>
    <string name="tap_to_add_photo">Tap to add photo</string>

    <string name="select_image_source">select image source</string>
    <string name="take_photo">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_photo">Remove picture</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">Permission required</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_saving_image">Error saving image</string>
    <string name="error_creating_file">Error creating file</string>
    <string name="no_camera_app">No camera app</string>
    <string name="error_date_format">Error date format (dd/MM/yyyy)</string>

    <string name="no_camera_title">Without app camera</string>
    <string name="no_camera_message">Not find app camera. Do you want to select an image from the gallery?</string>
    <string name="permission_denied_camera">Permission denied to access the camera</string>

    <string name="birth_date_format">Birth date: %s</string>
    <string name="age_format">: %d years</string>
    <string name="address_format">Address: %s</string>
    <string name="phone_format">Phone: %s</string>
    <string name="hobbies_format">Hobbies: %s</string>
    <string name="no_hobbies">N/A</string> 
    <string name="close">Close</string>

    <string name="empty_state_text">Empty state.</string>
    <string name="empty_people_text">Empty list without people.</string>
    <string name="empty_state_desc">Empty list illustration</string>

    <string name="character_image">Character image</string>
    <string name="search_character">Search character</string>

    <string name="search_hint">Buscar personajes...</string>

    <plurals name="total_people">
        <item quantity="one">Total %d people</item>
        <item quantity="other">Total %d people</item>
    </plurals>

    <plurals name="total_characters">
        <item quantity="one">Total %d characters</item>
        <item quantity="other">Total %d characters</item>
    </plurals>
</resources>