<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.HomeActivity">

    <include
        layout="@layout/toolbar_custom"
        android:id="@+id/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/common_padding_16dp_default"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_16dp_default"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="70dp"
                    app:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_add_a_photo"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"
                        android:background="@color/on_background"
                        android:clickable="true"
                        android:focusable="true"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_add_photo"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameHome"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="56dp"
                app:cornerRadius="@dimen/common_border_radius_8dp"
                app:endIconDrawable="@drawable/ic_drive_file_rename"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:minWidth="120dp"
                    android:minHeight="56dp"
                    android:nextFocusForward="@id/etBirthDate"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="@dimen/common_padding_16dp_default" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirthDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="56dp"
                app:cornerRadius="@dimen/common_border_radius_8dp"
                app:endIconDrawable="@drawable/ic_calendar_month"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/birthday_date"
                    android:inputType="none"
                    android:minWidth="120dp"
                    android:minHeight="56dp"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="@dimen/common_padding_16dp_default" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="56dp"
                app:cornerRadius="@dimen/common_border_radius_8dp"
                app:endIconDrawable="@drawable/ic_add_home"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minWidth="120dp"
                    android:minHeight="56dp"
                    android:nextFocusForward="@id/etPhoneNumber"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="@dimen/common_padding_16dp_default" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_16dp_default"
                android:minHeight="56dp"
                app:cornerRadius="@dimen/common_border_radius_8dp"
                app:endIconDrawable="@drawable/ic_local_phone"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:minWidth="120dp"
                    android:minHeight="56dp"
                    android:nextFocusForward="@id/etHobbies"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="@dimen/common_padding_16dp_default" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHobbies"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_16dp_default"
                android:minHeight="56dp"
                app:cornerRadius="@dimen/common_border_radius_8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/hobbies_max_length"
                app:endIconDrawable="@drawable/ic_hobbies"
                app:endIconMode="custom"
                app:helperText="@string/optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHobbies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hobbies"
                    android:inputType="textMultiLine"
                    android:maxLength="@integer/hobbies_max_length"
                    android:minWidth="120dp"
                    android:minHeight="56dp"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="@dimen/common_padding_16dp_default" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_height_button_70dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/primary"
                android:text="@string/add_people"
                android:textColor="@color/on_primary"
                android:textSize="18sp"
                app:cornerRadius="6dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="10dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>