<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_padding_16dp_default"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:layout_margin="@dimen/common_padding_16dp_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_android"
                android:tint="@color/green"
                app:tint="@color/green"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="56dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:cornerRadius="@dimen/common_border_radius_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:paddingVertical="@dimen/common_padding_16dp_default"
                android:paddingHorizontal="12dp"
                android:hint="@string/email"
                android:minWidth="120dp"
                android:importantForAccessibility="yes"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_16dp_default"
            android:minHeight="56dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_remove_red_eye"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:cornerRadius="@dimen/common_border_radius_8dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:paddingVertical="@dimen/common_padding_16dp_default"
                android:paddingHorizontal="12dp"
                android:hint="@string/password"
                android:minWidth="120dp"
                android:importantForAccessibility="yes"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height_button_70dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green"
            android:text="@string/login"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/common_border_radius_8dp"
            style="@style/Widget.MaterialComponents.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height_button_70dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/purple"
            android:text="@string/register"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/common_border_radius_8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/purple"
            app:strokeWidth="10dp"/>
    </LinearLayout>
</ScrollView>